# pdf2json

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  out.json  out2.json  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml
.slingshot/: agentHooks.json
docs/: INFERENCE_AND_RISK_POLICY.md  PUBLISHING.md
invoice_ocr/: __init__.py  api.py  cli.py  converter.py  pipeline.py  universal_engine.py
invoice_ocr/ocr/: ocr_engine.py  pdf_to_images.py  pipeline_pdf.py  run_text_ocr.py  serialize.py
invoice_ocr/preprocess/: __init__.py  deskew.py
invoice_ocr/risk/: assessor.py  ocr_confidence.py  scorer.py  signal_extractor.py  signals.py
invoice_ocr/schema/: base.py  product_invoice.py  resolver.py  service_invoice.py  universal.py  utility_bill.py
invoice_ocr/table/: columns.py  context.py  continuation.py  geometry.py  header_detector.py  normalize.py  pipeline_tables.py  row_validator.py  rows.py  schema.py  table_builder.py  table_engine.py  validators.py
invoice_ocr/utils/: json_encoder.py
invoice_ocr/validation/: confidence.py  document_extract.py  field_extract.py  line_items.py  normalize.py  summary_extract.py  summary_labels.py  summary_validate.py  validator.py
tests/: test_golden_regression.py
tests/golden/: invoice2_golden.json  invoice_golden.json  sample_invoice_golden.json
