[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "invoice-ocr"
version = "0.1.0"
description = "Local CPU-only invoice OCR package for Windows"
readme = "README.md"
requires-python = ">=3.10,<3.11"
authors = [{ name = "Your Name" }]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Operating System :: Microsoft :: Windows",
  "Environment :: Console",
  "Intended Audience :: Developers",
]
dependencies = [
  "numpy==1.26.4",
  "opencv-python-headless==4.10.0.84",
  "pdf2image>=1.17,<2",
  "Pillow>=10.3,<11",
  "paddlepaddle==2.6.2; platform_system == 'Windows' and python_version < '3.11'",
  "paddleocr==2.7.0.3; platform_system == 'Windows'",
]

[project.optional-dependencies]
dev = [
  "build>=1.2,<2",
  "pytest>=8,<9",
  "twine>=5,<6",
]

[project.scripts]
invoice-ocr = "invoice_ocr.cli:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["invoice_ocr", "invoice_ocr.*"]
exclude = ["tests*"]
