[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "invoice-ocr"
version = "0.1.1"
description = "Document OCR to structured JSON with validation, inference, and risk scoring."
readme = "README.md"
requires-python = ">=3.10,<3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Brahma100" }]
maintainers = [{ name = "Brahma100" }]
keywords = ["ocr", "invoice", "pdf", "document-ai", "paddleocr", "json"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS :: MacOS X",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Topic :: Office/Business :: Financial :: Accounting",
  "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
  "numpy==1.26.4",
  "opencv-python-headless==4.10.0.84",
  "pdf2image>=1.17,<2",
  "Pillow>=10.3,<11",
  "paddleocr==2.7.0.3",
  "paddlepaddle==2.6.2; platform_system == 'Windows' and python_version < '3.11'",
  "paddlepaddle>=3.0,<4; platform_system == 'Darwin' and python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/Brahma100/pdf2json"
Repository = "https://github.com/Brahma100/pdf2json"
Issues = "https://github.com/Brahma100/pdf2json/issues"

[project.optional-dependencies]
dev = [
  "build>=1.2,<2",
  "pytest>=8,<9",
  "twine>=5,<6",
]

[project.scripts]
invoice-ocr = "invoice_ocr.cli:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["invoice_ocr", "invoice_ocr.*"]
exclude = ["tests*"]
